fix image sixe on safari

--- a/src/components/LoginPage/LoginPage.css
+++ b/src/components/LoginPage/LoginPage.css
@@ -20,7 +20,7 @@
 
 .page-containe__login__image > img {
     height: 100%;
-    width: 100%;
+    width: 85%;
 }
 
 .page-container__login__content {
